# codev-rag-server

./: .coverage  .gitignore  INDEX_SAMPLE_PROJECT_README.md  Makefile  README.md  batch_index_test.py  codev_v1_rag.py  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  run_indexing.sh
.cursor/rules/: database-patterns.mdc  docker-testing-guide.mdc  fastapi-coding-standards.mdc  fastapi-structure.mdc  microservice-architecture.mdc  tdd-guidelines.mdc
app/: main.py
app/core/: config.py
data/qdrant/: raft_state.json
docs/tasks/: README.md  task-02-llm-server.md  (+8 more)
embedding-server/: .coverage.davisui-MacStudio.local.58801.XSQfsKwx  Dockerfile  download_model.py  requirements.txt
evaluation-server/: Dockerfile  README.md  env.example  requirements.txt  run_comprehensive_evaluation.py  run_evaluation.sh  run_single_system_evaluation.py  test_bm25_only.py  test_rag_server_debug.py  test_rag_system_simple.py
llm-server/: Dockerfile  requirements.txt
rag-server/: .coverage.davisui-MacStudio.local.74308.XdXLKrkx  Dockerfile  debug_real_index.py  extract_code.py  fix_correct_path.py  fix_duplicate_index.py  pytest.ini  requirements.txt  run_all_integration_tests.py  run_corrected_tests.py  run_integration_tests.py  run_search_comparison_test.py  simplified_integration_test.py  test_bm25_llamaindex.py  test_bookcontroller.json  test_bookcontroller_no_force.json  test_rrf_comparison.py  test_tokenizer_comparison.py
scripts/: health-check.sh  setup-dev.sh
temp_test_files/: BookController.java
vector-db/: README.md  docker-compose.yml
(+297 files in other folders)
